--- a/src/ui/templates/stage-controls.tpl.html
+++ b/src/ui/templates/stage-controls.tpl.html
@@ -29,31 +29,5 @@
     </div>
   </div>
 
-  <div class="ui-stage-controls__top-right">
-    <button
-      type="button"
-      class="ui-stage-btn info {{rightStateClass}}"
-      data-stage-action="toggle-right"
-      aria-label="Toggle info panel"
-      title="Info"
-    >
-      <span
-        class="ui-stage-btn__icon ui-stage-btn__icon--info"
-        aria-hidden="true"
-      ></span>
-    </button>
-
-    <button
-      type="button"
-      class="ui-stage-btn"
-      data-stage-action="toggle-fullscreen"
-      aria-label="{{fullscreenAriaLabel}}"
-      title="{{fullscreenAriaLabel}}"
-    >
-      <span
-        class="ui-stage-btn__icon {{fullscreenIconClass}}"
-        aria-hidden="true"
-      ></span>
-    </button>
-  </div>
+  <div class="ui-stage-controls__top-right">{{menu}}</div>
 </div>
