--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,11 +5,9 @@
 
 @use "./ui/root";
 @use "./ui/stage-controls";
-@use "./ui/zoom-controls";
-@use "./ui/scene-toggles";
 @use "./ui/sidebar-layout";
 @use "./ui/sidebar-common";
 @use "./ui/sidebar-left";
-@use "./ui/mobile-toggle";
+@use "./ui/menu";
 @use "./ui/hud";
 @use "./typography";
