next ui redesign steps

--- a/src/styles/ui/_menu.scss
+++ b/src/styles/ui/_menu.scss
@@ -73,6 +73,7 @@ $step: 50px;
     list-style: none;
     padding: 0;
     position: relative;
+    margin: 0;
 
     & li {
       position: absolute;
