--- a/src/styles/ui/_root.scss
+++ b/src/styles/ui/_root.scss
@@ -21,7 +21,7 @@
 
 #ui-root [data-slot="stage-controls"] {
   position: absolute;
-  top: 14px;
+  top: 0;
   left: 14px;
   right: 14px;
   pointer-events: none;
