--- a/src/ui/templates/stage-controls.tpl.html
+++ b/src/ui/templates/stage-controls.tpl.html
@@ -14,18 +14,42 @@
     </button>
   </div>
 
-  <div class="ui-stage-controls__top-center {{focusHiddenClass}}">
-    <button
-      type="button"
-      class="ui-stage-focus__back"
-      data-stage-action="go-home"
-      aria-label="Reset camera"
-      title="Back to default view"
-    >
-      <span aria-hidden="true">‹</span>
-    </button>
-    <div class="ui-stage-focus__title" title="{{focusTitle}}">
+  <div
+    class="ui-stage-controls__top-center {{focusHiddenClass}}"
+    data-stage-action="toggle-right"
+  >
+    <div class="ui-stage-focus__title heading" title="{{focusTitle}}">
       {{focusTitle}}
+      <svg
+        version="1.1"
+        id="Ebene_2"
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink"
+        x="0px"
+        y="0px"
+        viewBox="0 0 30 30"
+        style="enable-background: new 0 0 30 30"
+        xml:space="preserve"
+      >
+        <style type="text/css">
+          #Ebene_2 .st0 {
+            fill: #ffffff;
+          }
+        </style>
+        <g id="ViewTag_x5F_Earth1">
+          <g>
+            <g>
+              <circle class="st0" cx="15" cy="15" r="12" />
+            </g>
+            <g>
+              <path
+                d="M14.9,11.4c-0.4,0-0.8-0.1-1-0.4c-0.3-0.3-0.4-0.6-0.4-1s0.1-0.8,0.4-1s0.6-0.4,1-0.4s0.8,0.1,1,0.4
+				c0.3,0.3,0.4,0.6,0.4,1s-0.1,0.8-0.4,1C15.7,11.3,15.3,11.4,14.9,11.4z M13.6,21v-8.5h2.7V21H13.6z"
+              />
+            </g>
+          </g>
+        </g>
+      </svg>
     </div>
   </div>
 
