--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -164,7 +164,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+.heading {
   margin: 0 0 $heading-margin-bottom;
   font-family: $font-family-heading;
   font-weight: $font-weight-bold;
