--- a/src/styles/planet-icons.scss
+++ b/src/styles/planet-icons.scss
@@ -42,7 +42,7 @@
   @include planet-icon("1k_mimas.png");
 }
 
-.planet__icon--miranda-0 {
+.planet__icon--miranda {
   @include planet-icon("1k_miranda-0.png");
 }
 
@@ -50,7 +50,7 @@
   @include planet-icon("1k_nereid.png");
 }
 
-.planet__icon--oberonmap1 {
+.planet__icon--oberon {
   @include planet-icon("1k_oberonmap1.png");
 }
 
