--- a/src/styles/ui/_sidebar-common.scss
+++ b/src/styles/ui/_sidebar-common.scss
@@ -108,7 +108,6 @@
   overscroll-behavior: contain;
   touch-action: pan-y;
 
-
   // Scrollbar styling
   // - Firefox: scrollbar-color/scrollbar-width
   // - Chrome/Safari/Opera/Samsung Internet: ::-webkit-scrollbar
@@ -141,7 +140,6 @@
   &::-webkit-scrollbar-thumb:active {
     background-color: var(--sidebar-scrollbar-thumb-active);
   }
-
 }
 
 .ui-section {
@@ -280,7 +278,7 @@
 .ui-body-chips {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 0.3rem;
 }
 
