--- a/src/ui/templates/sidebar-left.tpl.html
+++ b/src/ui/templates/sidebar-left.tpl.html
@@ -1,9 +1,5 @@
 <div class="ui-sidebar-shell" data-ui="sidebar-left">
-  <aside
-    class="ui-sidebar ui-sidebar--left"
-    role="navigation"
-    aria-label="Solar system navigation"
-  >
+  <aside class="ui-sidebar ui-sidebar--left" role="navigation" aria-label="Solar system navigation">
     <header class="ui-sidebar__header">
       <div class="ui-sidebar__title">
         <h2>Navigation</h2>
@@ -36,10 +32,7 @@
             data-kind="planet"
             data-name="sun"
           >
-            <span
-              class="ui-planet__icon ui-planet__icon--sun"
-              aria-hidden="true"
-            ></span>
+            <span class="ui-planet__icon ui-planet__icon--sun" aria-hidden="true"></span>
             <span class="ui-planet__name">Sun</span>
           </button>
           <button
@@ -49,10 +42,7 @@
             data-kind="planet"
             data-name="mercury"
           >
-            <span
-              class="ui-planet__icon ui-planet__icon--mercury"
-              aria-hidden="true"
-            ></span>
+            <span class="ui-planet__icon ui-planet__icon--mercury" aria-hidden="true"></span>
             <span class="ui-planet__name">Mercury</span>
           </button>
           <button
@@ -62,10 +52,7 @@
             data-kind="planet"
             data-name="venus"
           >
-            <span
-              class="ui-planet__icon ui-planet__icon--venus"
-              aria-hidden="true"
-            ></span>
+            <span class="ui-planet__icon ui-planet__icon--venus" aria-hidden="true"></span>
             <span class="ui-planet__name">Venus</span>
           </button>
           <button
@@ -75,10 +62,7 @@
             data-kind="planet"
             data-name="earth"
           >
-            <span
-              class="ui-planet__icon ui-planet__icon--earth"
-              aria-hidden="true"
-            ></span>
+            <span class="ui-planet__icon ui-planet__icon--earth" aria-hidden="true"></span>
             <span class="ui-planet__name">Earth</span>
           </button>
           <button
@@ -88,10 +72,7 @@
             data-kind="planet"
             data-name="mars"
           >
-            <span
-              class="ui-planet__icon ui-planet__icon--mars"
-              aria-hidden="true"
-            ></span>
+            <span class="ui-planet__icon ui-planet__icon--mars" aria-hidden="true"></span>
             <span class="ui-planet__name">Mars</span>
           </button>
           <button
@@ -101,10 +82,7 @@
             data-kind="planet"
             data-name="jupiter"
           >
-            <span
-              class="ui-planet__icon ui-planet__icon--jupiter"
-              aria-hidden="true"
-            ></span>
+            <span class="ui-planet__icon ui-planet__icon--jupiter" aria-hidden="true"></span>
             <span class="ui-planet__name">Jupiter</span>
           </button>
           <button
@@ -114,10 +92,7 @@
             data-kind="planet"
             data-name="saturn"
           >
-            <span
-              class="ui-planet__icon ui-planet__icon--saturn"
-              aria-hidden="true"
-            ></span>
+            <span class="ui-planet__icon ui-planet__icon--saturn" aria-hidden="true"></span>
             <span class="ui-planet__name">Saturn</span>
           </button>
           <button
@@ -127,10 +102,7 @@
             data-kind="planet"
             data-name="uranus"
           >
-            <span
-              class="ui-planet__icon ui-planet__icon--uranus"
-              aria-hidden="true"
-            ></span>
+            <span class="ui-planet__icon ui-planet__icon--uranus" aria-hidden="true"></span>
             <span class="ui-planet__name">Uranus</span>
           </button>
           <button
@@ -140,10 +112,7 @@
             data-kind="planet"
             data-name="neptune"
           >
-            <span
-              class="ui-planet__icon ui-planet__icon--neptune"
-              aria-hidden="true"
-            ></span>
+            <span class="ui-planet__icon ui-planet__icon--neptune" aria-hidden="true"></span>
             <span class="ui-planet__name">Neptune</span>
           </button>
         </div>
@@ -151,9 +120,7 @@
 
       <section class="ui-nav-group" aria-labelledby="nav-group-dwarfs">
         <header class="ui-nav-group__header">
-          <h3 class="ui-nav-group__title" id="nav-group-dwarfs">
-            Dwarf planets
-          </h3>
+          <h3 class="ui-nav-group__title" id="nav-group-dwarfs">Dwarf planets</h3>
           <span class="ui-nav-group__meta">Outer / minor</span>
         </header>
 
@@ -165,10 +132,7 @@
             data-kind="planet"
             data-name="ceres"
           >
-            <span
-              class="ui-planet__icon ui-planet__icon--ceres"
-              aria-hidden="true"
-            ></span>
+            <span class="ui-planet__icon ui-planet__icon--ceres" aria-hidden="true"></span>
             <span class="ui-planet__name">Ceres</span>
           </button>
           <button
@@ -178,10 +142,7 @@
             data-kind="planet"
             data-name="pluto"
           >
-            <span
-              class="ui-planet__icon ui-planet__icon--pluto"
-              aria-hidden="true"
-            ></span>
+            <span class="ui-planet__icon ui-planet__icon--pluto" aria-hidden="true"></span>
             <span class="ui-planet__name">Pluto</span>
           </button>
           <button
@@ -191,10 +152,7 @@
             data-kind="planet"
             data-name="haumea"
           >
-            <span
-              class="ui-planet__icon ui-planet__icon--haumea"
-              aria-hidden="true"
-            ></span>
+            <span class="ui-planet__icon ui-planet__icon--haumea" aria-hidden="true"></span>
             <span class="ui-planet__name">Haumea</span>
           </button>
           <button
@@ -204,10 +162,7 @@
             data-kind="planet"
             data-name="makemake"
           >
-            <span
-              class="ui-planet__icon ui-planet__icon--makemake"
-              aria-hidden="true"
-            ></span>
+            <span class="ui-planet__icon ui-planet__icon--makemake" aria-hidden="true"></span>
             <span class="ui-planet__name">Makemake</span>
           </button>
           <button
@@ -217,10 +172,7 @@
             data-kind="planet"
             data-name="eris"
           >
-            <span
-              class="ui-planet__icon ui-planet__icon--eris"
-              aria-hidden="true"
-            ></span>
+            <span class="ui-planet__icon ui-planet__icon--eris" aria-hidden="true"></span>
             <span class="ui-planet__name">Eris</span>
           </button>
         </div>
@@ -242,10 +194,7 @@
               data-kind="moon"
               data-name="moon"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Moon</span>
             </button>
           </div>
@@ -261,10 +210,7 @@
               data-kind="moon"
               data-name="phobos"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Phobos</span>
             </button>
             <button
@@ -274,10 +220,7 @@
               data-kind="moon"
               data-name="deimos"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Deimos</span>
             </button>
           </div>
@@ -293,10 +236,7 @@
               data-kind="moon"
               data-name="io"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Io</span>
             </button>
             <button
@@ -306,10 +246,7 @@
               data-kind="moon"
               data-name="europa"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Europa</span>
             </button>
             <button
@@ -319,10 +256,7 @@
               data-kind="moon"
               data-name="ganymede"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Ganymede</span>
             </button>
             <button
@@ -332,10 +266,7 @@
               data-kind="moon"
               data-name="callisto"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Callisto</span>
             </button>
           </div>
@@ -351,10 +282,7 @@
               data-kind="moon"
               data-name="mimas"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Mimas</span>
             </button>
             <button
@@ -364,10 +292,7 @@
               data-kind="moon"
               data-name="enceladus"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Enceladus</span>
             </button>
             <button
@@ -377,10 +302,7 @@
               data-kind="moon"
               data-name="tethys"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Tethys</span>
             </button>
             <button
@@ -390,10 +312,7 @@
               data-kind="moon"
               data-name="dione"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Dione</span>
             </button>
             <button
@@ -403,10 +322,7 @@
               data-kind="moon"
               data-name="rhea"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Rhea</span>
             </button>
             <button
@@ -416,10 +332,7 @@
               data-kind="moon"
               data-name="titan"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Titan</span>
             </button>
             <button
@@ -429,10 +342,7 @@
               data-kind="moon"
               data-name="iapetus"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Iapetus</span>
             </button>
           </div>
@@ -448,10 +358,7 @@
               data-kind="moon"
               data-name="miranda"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Miranda</span>
             </button>
             <button
@@ -461,10 +368,7 @@
               data-kind="moon"
               data-name="ariel"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Ariel</span>
             </button>
             <button
@@ -474,10 +378,7 @@
               data-kind="moon"
               data-name="umbriel"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Umbriel</span>
             </button>
             <button
@@ -487,10 +388,7 @@
               data-kind="moon"
               data-name="titania"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Titania</span>
             </button>
             <button
@@ -500,10 +398,7 @@
               data-kind="moon"
               data-name="oberon"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Oberon</span>
             </button>
           </div>
@@ -519,10 +414,7 @@
               data-kind="moon"
               data-name="triton"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Triton</span>
             </button>
             <button
@@ -532,10 +424,7 @@
               data-kind="moon"
               data-name="proteus"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Proteus</span>
             </button>
             <button
@@ -545,10 +434,7 @@
               data-kind="moon"
               data-name="nereid"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Nereid</span>
             </button>
           </div>
@@ -564,10 +450,7 @@
               data-kind="moon"
               data-name="charon"
             >
-              <span
-                class="ui-planet__icon ui-planet__icon--moon-generic"
-                aria-hidden="true"
-              ></span>
+              <span class="ui-planet__icon ui-planet__icon--moon-generic" aria-hidden="true"></span>
               <span class="ui-planet__name">Charon</span>
             </button>
           </div>
@@ -575,8 +458,7 @@
       </section>
 
       <p class="ui-hint ui-hint--compact">
-        Grouped navigation so the panel stops looking like a random grocery
-        list.
+        Grouped navigation so the panel stops looking like a random grocery list.
       </p>
     </div>
   </aside>
