--- a/src/ui/templates/sidebar.tpl.html
+++ b/src/ui/templates/sidebar.tpl.html
@@ -1,9 +1,5 @@
 <div class="ui-sidebar-shell" data-ui="sidebar-right">
-  <aside
-    class="ui-sidebar ui-sidebar--right"
-    role="complementary"
-    aria-label="Body information"
-  >
+  <aside class="ui-sidebar ui-sidebar--right" role="complementary" aria-label="Body information">
     <header class="ui-sidebar__header">
       <div class="ui-sidebar__title">
         <h2>{{title}}</h2>
