--- a/src/ui/templates/stage-controls.tpl.html
+++ b/src/ui/templates/stage-controls.tpl.html
@@ -7,17 +7,11 @@
       aria-label="Toggle planets panel"
       title="Planets"
     >
-      <span
-        class="ui-stage-btn__icon ui-stage-btn__icon--planets"
-        aria-hidden="true"
-      ></span>
+      <span class="ui-stage-btn__icon ui-stage-btn__icon--planets" aria-hidden="true"></span>
     </button>
   </div>
 
-  <div
-    class="ui-stage-controls__top-center {{focusHiddenClass}}"
-    data-stage-action="toggle-right"
-  >
+  <div class="ui-stage-controls__top-center {{focusHiddenClass}}" data-stage-action="toggle-right">
     <div class="ui-stage-focus__title heading" title="{{focusTitle}}">
       {{focusTitle}}
       <svg
