--- a/src/ui/templates/menu.tpl.html
+++ b/src/ui/templates/menu.tpl.html
@@ -19,22 +19,10 @@
               fill: #ffffff;
             }
           </style>
-          <polygon
-            class="st0"
-            points="45.5,38 37.5,38 37.5,36 43.5,36 43.5,30 45.5,30 "
-          />
-          <polygon
-            class="st0"
-            points="45.5,20 43.5,20 43.5,14 37.5,14 37.5,12 45.5,12 "
-          />
-          <polygon
-            class="st0"
-            points="6.5,20 4.5,20 4.5,12 12.5,12 12.5,14 6.5,14 "
-          />
-          <polygon
-            class="st0"
-            points="12.5,38 4.5,38 4.5,30 6.5,30 6.5,36 12.5,36 "
-          />
+          <polygon class="st0" points="45.5,38 37.5,38 37.5,36 43.5,36 43.5,30 45.5,30 " />
+          <polygon class="st0" points="45.5,20 43.5,20 43.5,14 37.5,14 37.5,12 45.5,12 " />
+          <polygon class="st0" points="6.5,20 4.5,20 4.5,12 12.5,12 12.5,14 6.5,14 " />
+          <polygon class="st0" points="12.5,38 4.5,38 4.5,30 6.5,30 6.5,36 12.5,36 " />
         </svg>
 
         <svg
@@ -58,16 +46,10 @@
 
           <g transform="translate(3.5 0)">
             <rect x="2" y="14" class="st0" width="39" height="23" />
-            <polygon
-              class="st1"
-              points="39,23 32,23 32,16 34,16 34,21 39,21 "
-            />
+            <polygon class="st1" points="39,23 32,23 32,16 34,16 34,21 39,21 " />
             <polygon class="st1" points="11,35 9,35 9,30 4,30 4,28 11,28 " />
             <polygon class="st1" points="11,23 4,23 4,21 9,21 9,16 11,16 " />
-            <polygon
-              class="st1"
-              points="34,35 32,35 32,28 39,28 39,30 34,30 "
-            />
+            <polygon class="st1" points="34,35 32,35 32,28 39,28 39,30 34,30 " />
           </g>
         </svg>
       </button>
@@ -96,9 +78,7 @@
           <g id="markerOFF_x5F_0_x5F_path">
             <circle cx="25" cy="25" r="22" />
           </g>
-          <g
-            id="markerOFF_x5F_0_x5F_path_00000163057588561250577630000012919618259424920449_"
-          >
+          <g id="markerOFF_x5F_0_x5F_path_00000163057588561250577630000012919618259424920449_">
             <g>
               <path
                 class="st0"
@@ -142,8 +122,7 @@
           class="off"
         >
           <style type="text/css">
-            #markerOFF_x5F_0_x5F_path_00000054976206169596592240000001320991853641552057_
-              .st0 {
+            #markerOFF_x5F_0_x5F_path_00000054976206169596592240000001320991853641552057_ .st0 {
               fill: #ffffff;
             }
           </style>
@@ -156,9 +135,7 @@
 		c-11-3.8-22.9,2.1-26.7,13s2.1,22.9,13,26.7S41.1,42.8,44.9,31.8z"
             />
             <circle class="st0" cx="42" cy="15" r="5.5" />
-            <polygon
-              points="42,16.6 39.3,14 40.1,13.3 42,15.3 43.9,13.3 44.7,14 	"
-            />
+            <polygon points="42,16.6 39.3,14 40.1,13.3 42,15.3 43.9,13.3 44.7,14 	" />
           </g>
           <g>
             <path
@@ -168,9 +145,7 @@
 		C18.4,17.5,22.5,15.3,26.7,16.1z"
             />
             <circle class="st0" cx="15" cy="28" r="4.5" />
-            <polygon
-              points="15,29.7 12.6,27.4 13.4,26.6 15,28.3 16.6,26.6 17.4,27.4 	"
-            />
+            <polygon points="15,29.7 12.6,27.4 13.4,26.6 15,28.3 16.6,26.6 17.4,27.4 	" />
           </g>
         </svg>
       </button>
