--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -5,6 +5,8 @@
      left sidebar becomes a full-screen overlay.
 ------------------------------------------------------------ */
 
+@use "./tokens" as t;
+
 #layout {
   height: 100%;
   width: 100%;
@@ -35,7 +37,7 @@
 // Existing controls
 #cameraSelector {
   position: absolute;
-  top: 12px;
-  right: 12px;
-  z-index: 30;
+  top: t.$space-3;
+  right: t.$space-3;
+  z-index: t.$z-canvas-ui;
 }
