adding cinematic mode

--- a/src/ui/templates/sidebar-left.tpl.html
+++ b/src/ui/templates/sidebar-left.tpl.html
@@ -29,6 +29,16 @@
             <span class="ui-planet__icon ui-planet__icon--sun" aria-hidden="true"></span>
             <span class="ui-planet__name">Overview</span>
           </button>
+
+          <button
+            class="ui-planet"
+            type="button"
+            data-action="select-camera"
+            data-camera="Cinematic"
+          >
+            <span class="ui-planet__icon ui-planet__icon--sun" aria-hidden="true"></span>
+            <span class="ui-planet__name">Cinematic</span>
+          </button>
         </div>
       </section>
 
